name:                rendertext
version:             0.1.0.0
synopsis:            Render Unicode text easy
description:
    Pick the description you like the most.
    .
    This library gives you functions to render Unicode text on a buffer. You
    can upload this buffer to OpenGL, to a image file or wherever you want. The
    text rendering is based on the `pango` and `cairo` packages.
    .
    This is a simplified interface to `pango` and `cairo` packages for the
    purpose of rendering simple text in a somewhat Unicode-correct fashion.
    .
    This package wants to be a simple, no-nonsense text rendering library. It
    was written for the need to have quick and simple text in OpenGL.
homepage:            https://github.com/Noeda/rendertext/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
copyright:           2014 (c) Mikko Juola
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag build-toys
  default:             False
  description:         Build toy programs

library
  exposed-modules:     Graphics.Text
  build-depends:       base  >=4.7 && <5.0
                      ,bytestring >=0.10 && <1.0
                      ,cairo >=0.13.0.4 && <1.0
                      ,deepseq >=1.3.0.2 && <2.0
                      ,exceptions >=0.6.1 && <1.0
                      ,lens  >=4.6  && <5.0
                      ,linear >= 1.15 && <2.0
                      ,pango >=0.13 && <1.0
                      ,text  >=0.9 && <2.0
                      ,transformers >=0.4 && <1.0
                      ,vector >=0.10 && <1.0
  ghc-options:         -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  default-language:    Haskell2010

executable text-to-image
  if flag(build-toys)
    build-depends:     base
                      ,JuicyPixels >=3.2 && <4.0
                      ,linear >= 1.15 && <2.0
                      ,rendertext
                      ,text  >=0.9 && <2.0
                      ,vector >=0.10 && <1.0
  else
    buildable:         False

  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      toys/text-to-image
  default-language:    Haskell2010

benchmark bench-texting
  type:                exitcode-stdio-1.0
  build-depends:       base, rendertext
                      ,criterion >=1.0.2 && <2.0
                      ,text  >=0.9 && <2.0
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      benchmark
  default-language:    Haskell2010

